crates/sutura-app/tests/snapshots/revenue-by-day__params@clickhouse.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.params()
---
- Date:
    year: 2026
    month: 6
    day: 28
- Date:
    year: 2026
    month: 7
    day: 1
