crates/sutura-app/tests/snapshots/revenue-by-day__params@duckdb.snap
---
source: crates/sutura-app/tests/golden.rs
expression: query.params()
---
- Date:
    year: 2026
    month: 6
    day: 28
- Date:
    year: 2026
    month: 7
    day: 1
