crates/sutura-app/tests/snapshots/revenue-by-day__plan@duckdb.snap
---
source: crates/sutura-app/tests/golden.rs
expression: plan
---
source: local
metric: revenue
table: orders
joins: []
bucket:
  label: period
  grain: day
  column:
    table: orders
    column: order_date
keys: []
measure:
  simple:
    aggregate: sum
    column:
      table: orders
      column: amount_cents
measure_label: revenue
filters:
  - origin: definition
    predicate:
      at_or_after:
        column:
          table: orders
          column: order_date
        param: 0
  - origin: definition
    predicate:
      before:
        column:
          table: orders
          column: order_date
        param: 1
params:
  - Date:
      year: 2026
      month: 6
      day: 28
  - Date:
      year: 2026
      month: 7
      day: 1
range:
  start:
    year: 2026
    month: 6
    day: 28
  end:
    year: 2026
    month: 7
    day: 1
row_limit: 10000
