crates/sutura-app/tests/snapshots/revenue-by-day__rows@datafusion.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
period	revenue
Text(2026-06-28)	Integer(1)
Text(2026-06-30)	Integer(75000)
