crates/sutura-app/tests/snapshots/revenue-by-day__sql@clickhouse.snap
---
source: crates/sutura-app/tests/golden.rs
expression: query.sql()
---
SELECT CAST(dateTrunc('day', "orders"."order_date") AS DATE) AS "period", sum("orders"."amount_cents") AS "revenue" FROM "orders" WHERE "orders"."order_date" >= ? AND "orders"."order_date" < ? GROUP BY CAST(dateTrunc('day', "orders"."order_date") AS DATE) ORDER BY CAST(dateTrunc('day', "orders"."order_date") AS DATE) LIMIT 10000
