crates/sutura-app/tests/snapshots/revenue-by-day__sql@duckdb.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT CAST(DATE_TRUNC('day', "orders"."order_date") AS DATE) AS "period", SUM("orders"."amount_cents") AS "revenue" FROM "orders" WHERE "orders"."order_date" >= ? AND "orders"."order_date" < ? GROUP BY CAST(DATE_TRUNC('day', "orders"."order_date") AS DATE) ORDER BY CAST(DATE_TRUNC('day', "orders"."order_date") AS DATE) LIMIT 10000
