crates/sutura-app/tests/snapshots/revenue-by-day__sql@postgres.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT CAST(DATE_TRUNC('day', "orders"."order_date") AS DATE) AS "period", SUM("orders"."amount_cents") AS "revenue" FROM "orders" WHERE "orders"."order_date" >= $1 AND "orders"."order_date" < $2 GROUP BY CAST(DATE_TRUNC('day', "orders"."order_date") AS DATE) ORDER BY CAST(DATE_TRUNC('day', "orders"."order_date") AS DATE) LIMIT 10000
